setup/k8s/media/03-apps/99-external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: media
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.15.1
          args:
            - --source=traefik-proxy
            - --traefik-disable-legacy
            - --domain-filter=media.lan.
            - --domain-filter=media.${WAN_HOSTNAME}.
            - --provider=rfc2136
            - --rfc2136-host=infra-cluster-control-plane
            - --rfc2136-port=30053
            - --rfc2136-zone=media.lan
            - --rfc2136-zone=media.${WAN_HOSTNAME}
            - --rfc2136-tsig-secret-alg=hmac-sha256
            - --rfc2136-tsig-keyname=externaldns-key
            - --rfc2136-min-ttl=60s
            - --log-level=debug
