setup/k8s/media/03-apps/00-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: pinger
          image: python:3-slim
          command:
            [
              "/bin/sh",
              "-c",
              "pip install websockets && python3 -u /app/pinger.py",
            ]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: content
              subPath: dashboard/backend/pinger.py
              mountPath: /app/pinger.py
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: content
              subPath: dashboard/frontend
              mountPath: /usr/share/nginx/html
            - name: content
              subPath: dashboard/nginx/default.conf
              mountPath: /etc/nginx/conf.d/default.conf
      volumes:
        - name: content
          persistentVolumeClaim:
            claimName: configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: media
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---

---
# Ping para AdGuard Home
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: media
spec:
  type: ExternalName
  externalName: infra-cluster-control-plane
---
# Ping para SpeedTest (Infra)
apiVersion: v1
kind: Service
metadata:
  name: speedtest-service
  namespace: media
spec:
  type: ExternalName
  externalName: infra-cluster-control-plane
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.media.lan`) || Host(`dashboard.media.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: dashboard
          port: 80
