setup/k8s/media/03-apps/00-traefik-ping.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ping
  namespace: ingress-traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik-media-service`) && PathPrefix(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
