setup/k8s/media/03-apps/02-emby-external.conditional.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  ports:
    - name: webui
      port: 8096
      targetPort: 8096
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: emby
  namespace: media
subsets:
  - addresses:
      - ip: "${DOCKER_HOST_IP}"
    ports:
      - name: webui
        port: 8096
        protocol: TCP
---

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: emby-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`emby.media.lan`) || Host(`emby.media.${WAN_HOSTNAME}`) || Host(`emby-service`)
      kind: Rule
      services:
        - name: emby
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: emby-wan
  namespace: media
spec:
  entryPoints:
    - web-external
  routes:
    - match: Host(`emby.media.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: emby
          port: 8096
