setup/k8s/media/03-apps/02-emby-internal.conditional.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      priorityClassName: critical-media
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - name: emby
          image: lscr.io/linuxserver/emby:latest
          ports:
            - name: webui
              containerPort: 8096
            - name: discovery
              containerPort: 7359
              protocol: UDP
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "6Gi"
          livenessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: emby
            - name: media
              mountPath: /media
            - name: transcode
              mountPath: /transcode
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: transcode
          emptyDir:
            medium: Memory
            sizeLimit: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  selector:
    app: emby
  ports:
    - name: webui
      port: 8096
      targetPort: 8096
    - name: discovery
      port: 7359
      targetPort: 7359
      protocol: UDP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`emby.media.lan`) || Host(`emby.media.${WAN_HOSTNAME}`) || Host(`emby-service`)
      kind: Rule
      services:
        - name: emby
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby-wan
  namespace: media
spec:
  entryPoints:
    - web-external
  routes:
    - match: Host(`emby.media.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: emby
          port: 8096
