setup/k8s/media/03-apps/02-feishin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feishin
  namespace: media
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: feishin
  template:
    metadata:
      labels:
        app: feishin
    spec:
      priorityClassName: critical-media
      dnsPolicy: ClusterFirstWithHostNet
      dnsConfig:
        searches:
          - ${WAN_HOSTNAME}
      hostNetwork: true
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: feishin
          image: ghcr.io/jeffvli/feishin:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9180
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: feishin
  namespace: media
spec:
  selector:
    app: feishin
  ports:
    - name: http
      port: 9180
      targetPort: 9180
  type: LoadBalancer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: feishin-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`spotyval.media.lan`) || Host(`spotyval.media.${WAN_HOSTNAME}`) || Host(`feishin-service`)
      kind: Rule
      services:
        - name: feishin
          port: 9180
