setup/k8s/media/03-apps/02-navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: media
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      priorityClassName: critical-media
      dnsPolicy: ClusterFirstWithHostNet
      dnsConfig:
        searches:
          - ${WAN_HOSTNAME}
      hostNetwork: true
      securityContext:
        runAsUser: ${PUID}
        runAsGroup: ${PGID}
        fsGroup: ${PGID}
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4533
          livenessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "1000m"
            limits:
              memory: "2Gi"
              cpu: 2000m
          volumeMounts:
            - name: configs
              mountPath: /data
              subPath: navidrome
            - name: media
              mountPath: /media
              readOnly: true
        - name: feishin
          image: ghcr.io/jeffvli/feishin:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - name: http
              containerPort: 9180
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: media
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      port: 4533
      targetPort: 4533
  type: LoadBalancer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: navidrome-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`navidrome.media.lan`) || Host(`navidrome.media.${WAN_HOSTNAME}`) || Host(`navidrome-service`)
      kind: Rule
      services:
        - name: navidrome
          port: 4533
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: navidrome-wan
  namespace: media
spec:
  entryPoints:
    - web-external
  routes:
    - match: Host(`navidrome.media.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: navidrome
          port: 4533
---
apiVersion: v1
kind: Service
metadata:
  name: feishin
  namespace: media
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      port: 9180
      targetPort: 9180
  type: LoadBalancer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: feishin-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`feishin.media.lan`) || Host(`feishin.media.${WAN_HOSTNAME}`) || Host(`feishin-service`)
      kind: Rule
      services:
        - name: feishin
          port: 9180
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: feishin-wan
  namespace: media
spec:
  entryPoints:
    - web-external
  routes:
    - match: Host(`feishin.media.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: feishin
          port: 9180
