setup/k8s/media/03-apps/05-qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          ports:
            - name: webui
              containerPort: 8081
            - name: torrent-tcp
              containerPort: 53471
              protocol: TCP
            - name: torrent-udp
              containerPort: 53471
              protocol: UDP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: qbittorrent
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: webui
      port: 8081
      targetPort: 8081
    - name: torrent-tcp
      port: 53471
      targetPort: 53471
      nodePort: 53471
      protocol: TCP
    - name: torrent-udp
      port: 53471
      targetPort: 53471
      nodePort: 53471
      protocol: UDP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.media.lan`) || Host(`qbittorrent.media.${WAN_HOSTNAME}`) || Host(`qbittorrent-service`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8081
