setup/k8s/media/03-apps/06-jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          ports:
            - containerPort: 9117
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: jackett
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  selector:
    app: jackett
  ports:
    - port: 9117
      targetPort: 9117
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett-lan
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jackett.media.lan`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett-lan-wan-host
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jackett.media.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett-lan-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jackett.media.lan`) || Host(`jackett.media.${WAN_HOSTNAME}`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: media
      services:
        - name: jackett
          port: 9117
