setup/k8s/media/03-apps/06-prowlarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: media
spec:
  serviceName: prowlarr
  replicas: 1
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
              name: prowlarr
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: prowlarr
            - name: media
              mountPath: /media
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: prowlarr-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.media.lan`) || Host(`prowlarr.media.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
