setup/k8s/media/03-apps/07-bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6767
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: bazarr
            - name: media
              mountPath: /media
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: 6767
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: bazarr-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.media.lan`) || Host(`bazarr.media.${WAN_HOSTNAME}`) || Host(`bazarr-service`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
