setup/k8s/media/03-apps/07-lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: ghcr.io/hotio/lidarr:pr-plugins
          imagePullPolicy: Always
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    [...]
          ports:
            - containerPort: 8686
              name: lidarr
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          livenessProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 180
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: lidarr
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /media
            - name: scripts
              mountPath: /opt/scripts
              subPath: arr
              readOnly: true
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: scripts
          persistentVolumeClaim:
            claimName: scripts-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - port: 8686
      targetPort: 8686
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DOCKER_HOST_IP}"
  name: lidarr-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lidarr.media.lan`) || Host(`lidarr.media.${WAN_HOSTNAME}`) || Host(`lidarr-service`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
