setup/k8s/media/03-apps/07-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
              name: radarr
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: radarr
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /media
            - name: scripts
              mountPath: /opt/scripts
              subPath: arr
              readOnly: true
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: scripts
          persistentVolumeClaim:
            claimName: scripts-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.media.lan`) || Host(`radarr.media.${WAN_HOSTNAME}`) || Host(`radarr-service`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
