setup/k8s/media/03-apps/07-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
              name: sonarr
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: sonarr
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /media
            - name: scripts
              mountPath: /opt/scripts
              subPath: arr
              readOnly: true
      volumes:
        - name: configs
          persistentVolumeClaim:
            claimName: configs-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: scripts
          persistentVolumeClaim:
            claimName: scripts-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-lan
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.media.lan`) || Host(`sonarr.media.${WAN_HOSTNAME}`) || Host(`sonarr-service`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
