setup/k8s/media/03-apps/99-home-placeholder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-placeholder
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-placeholder
  template:
    metadata:
      labels:
        app: home-placeholder
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
        - name: pacman
          image: nsahil992/pacman-game:latest
          ports:
            - containerPort: 80
      volumes:
        - name: html
          configMap:
            name: home-html
            items:
              - key: index.html
                path: index.html
              - key: robots.txt
                path: robots.txt

        - name: config
          configMap:
            name: home-html
            items:
              - key: default.conf
                path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: home-placeholder
  namespace: media
spec:
  selector:
    app: home-placeholder
  ports:
    - name: http-home
      protocol: TCP
      port: 80
      targetPort: 8081
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-lan
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`media.lan`)
      kind: Rule
      services:
        - name: home-placeholder
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-wan
  namespace: media
spec:
  entryPoints:
    - websecure-wan
  routes:
    - match: Host(`${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: home-placeholder
          port: 80
    - match: Host(`www.${WAN_HOSTNAME}`)
      kind: Rule
      middlewares:
        - name: www-redirect
          namespace: media
      services:
        - name: home-placeholder
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-wan-http
  namespace: media
spec:
  entryPoints:
    - web-wan
  routes:
    - match: Host(`${WAN_HOSTNAME}`) || Host(`www.${WAN_HOSTNAME}`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: media
      services:
        - name: home-placeholder
          port: 80
